--- a/requirements.txt
+++ b/requirements.txt
@@ -1,73 +1,124 @@
-pillow~=10.4.0
-shapely~=2.0.6
-numpy~=2.1.1
-matplotlib~=3.9.2
-openai~=1.44.0
-python-dotenv~=1.0.1
-pytest~=8.3.2
-beautifulsoup4~=4.12.3
-soupsieve~=2.6
-h11~=0.14.0
-pip~=22.3.1
-attrs~=24.2.0
-distro~=1.9.0
-google~=3.0.0
-rsa~=4.9
-pyasn1~=0.6.0
-dill~=0.3.8
-pytz~=2024.1
-requests~=2.32.3
-PyYAML~=6.0.2
-idna~=3.8
-multidict~=6.0.5
-exceptiongroup~=1.2.2
-sniffio~=1.3.1
-httpcore~=1.0.5
-certifi~=2024.8.30
-isort~=5.13.2
-tomli~=2.0.1
-setuptools~=65.5.0
-jiter~=0.5.0
-flake8~=7.1.1
-pyflakes~=3.2.0
-pycodestyle~=2.12.1
-fsspec~=2024.6.1
-aiohttp~=3.10.5
-yarl~=1.10.0
-cachetools~=5.5.0
-urllib3~=2.2.2
-packaging~=24.1
-google-api-python-client~=2.146.0
-pydantic~=2.9.0
-pandas~=2.2.2
-httplib2~=0.22.0
-tqdm~=4.66.5
-httpx~=0.27.2
-anyio~=4.4.0
-pyarrow~=17.0.0
-python-dateutil~=2.9.0.post0
-pylint~=3.2.7
-astroid~=3.2.4
-tomlkit~=0.13.2
-mccabe~=0.7.0
-platformdirs~=4.3.2
-pluggy~=1.5.0
-iniconfig~=2.0.0
-aiosignal~=1.3.1
-frozenlist~=1.4.1
-aiohappyeyeballs~=2.4.0
-tzdata~=2024.1
-coverage~=7.6.1
-datasets~=2.21.0
-filelock~=3.16.0
-multiprocess~=0.70.16
-xxhash~=3.5.0
-six~=1.16.0
-pyparsing~=3.1.4
-contourpy~=1.3.0
-fonttools~=4.53.1
-cycler~=0.12.1
-kiwisolver~=1.4.7
-uritemplate~=4.1.1
-autoflake~=2.3.1
-javalang~=0.13.0
+aiohappyeyeballs==2.4.0
+aiohttp==3.10.5
+aiosignal==1.3.1
+annotated-types==0.7.0
+anyio==4.4.0
+astroid==3.2.4
+async-timeout==4.0.3
+attrs==24.2.0
+autoflake==2.3.1
+beautifulsoup4==4.12.3
+bs4==0.0.2
+cachetools==5.5.0
+certifi==2024.8.30
+chardet==5.2.0
+charset-normalizer==3.3.2
+colorama==0.4.6
+contourpy==1.3.0
+coverage==7.6.1
+cycler==0.12.1
+datasets==2.21.0
+dill==0.3.8
+distro==1.9.0
+docstring_parser==0.16
+exceptiongroup==1.2.2
+filelock==3.16.0
+flake8==7.1.1
+fonttools==4.53.1
+frozenlist==1.4.1
+fsspec==2024.6.1
+gitdb==4.0.11
+GitPython==3.1.43
+google==3.0.0
+google-ai-generativelanguage==0.6.9
+google-api-core==2.20.0
+google-api-python-client==2.146.0
+google-auth==2.34.0
+google-auth-httplib2==0.2.0
+google-cloud==0.34.0
+google-cloud-aiplatform==1.71.1
+google-cloud-bigquery==3.27.0
+google-cloud-core==2.4.1
+google-cloud-resource-manager==1.13.1
+google-cloud-storage==2.18.2
+google-crc32c==1.6.0
+google-generativeai==0.8.1
+google-resumable-media==2.7.2
+googleapis-common-protos==1.65.0
+grpc-google-iam-v1==0.13.1
+grpcio==1.66.1
+grpcio-status==1.62.3
+h11==0.14.0
+httpcore==1.0.5
+httplib2==0.22.0
+httpx==0.27.2
+huggingface-hub==0.24.6
+idna==3.8
+iniconfig==2.0.0
+isort==5.13.2
+javalang==0.13.0
+jiter==0.5.0
+kiwisolver==1.4.7
+lizard==1.17.13
+lxml==5.3.0
+mando==0.7.1
+markdown-it-py==3.0.0
+matplotlib==3.9.2
+mccabe==0.7.0
+mdurl==0.1.2
+multidict==6.0.5
+multiprocess==0.70.16
+numpy==2.1.1
+openai==1.55.3
+packaging==24.1
+pandas==2.2.2
+parameterized==0.9.0
+pillow==10.4.0
+platformdirs==4.3.2
+pluggy==1.5.0
+proto-plus==1.24.0
+protobuf==4.25.5
+pyarrow==17.0.0
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+pycodestyle==2.12.1
+pydantic==2.9.0
+pydantic_core==2.23.2
+pyflakes==3.2.0
+Pygments==2.18.0
+pygount==1.8.0
+pylint==3.2.7
+pyparsing==3.1.4
+pytest==8.3.2
+pytest-assertcount==1.0.0
+pytest-cov==5.0.0
+pytest-json-report==1.5.0
+pytest-metadata==3.1.1
+pytest-timeout==2.3.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+pytz==2024.1
+PyYAML==6.0.2
+radon==6.0.1
+requests==2.32.3
+rich==13.9.4
+rsa==4.9
+scipy==1.14.1
+seaborn==0.13.2
+shapely==2.0.6
+six==1.16.0
+smmap==5.0.1
+sniffio==1.3.1
+soupsieve==2.6
+tomli==2.0.1
+tomlkit==0.13.2
+tqdm==4.66.5
+tree-sitter==0.23.2
+typing_extensions==4.12.2
+tzdata==2024.1
+uritemplate==4.1.1
+urllib3==2.2.2
+vertexai==1.71.1
+xxhash==3.5.0
+yarl==1.10.0
+httpx==0.27.2
